syntax = "proto3";

option csharp_namespace = "gRPC";

package orderedcache;

// gRPC service definition for OrderedCache operations
service OrderedCacheService {
  // Add a new value to the cache
  rpc Add (AddRequest) returns (EntryResponse);
  
  // Update an existing entry
  rpc Update (UpdateRequest) returns (BoolResponse);
  
  // Remove an entry by ID
  rpc Remove (RemoveRequest) returns (EntryResponse);
  
  // Clear all entries from the cache
  rpc Clear (EmptyRequest) returns (BoolResponse);
  
  // Get the count of entries
  rpc GetCount (EmptyRequest) returns (CountResponse);
  
  // Get an entry by ID
  rpc GetEntry (GetEntryRequest) returns (EntryResponse);
  
  // Get the first entry
  rpc GetFirst (EmptyRequest) returns (EntryResponse);
  
  // Get the first ID
  rpc GetFirstId (EmptyRequest) returns (IdResponse);
  
  // Get the last entry
  rpc GetLast (EmptyRequest) returns (EntryResponse);
  
  // Get the last ID
  rpc GetLastId (EmptyRequest) returns (IdResponse);
  
  // Get the next entry
  rpc GetNext (GetNextRequest) returns (EntryResponse);
  
  // Get the next entry asynchronously (awaits if needed)
  rpc GetNextAwaiting (GetNextRequest) returns (EntryResponse);
  
  // Get future first entry (awaits next entry)
  rpc GetFutureFirst (EmptyRequest) returns (EntryResponse);
  
  // Enumerate existing entries (server streaming)
  rpc Enumerate (EmptyRequest) returns (stream EntryResponse);
  
  // Enumerate future entries as they are added (server streaming)
  rpc EnumerateFuture (EmptyRequest) returns (stream EntryResponse);
}

// Request messages
message EmptyRequest {}

message AddRequest {
  bytes value = 1;  // MessagePack serialized TValue
}

message UpdateRequest {
  int64 id = 1;
  bytes value = 2;  // MessagePack serialized TValue
}

message RemoveRequest {
  int64 id = 1;
}

message GetEntryRequest {
  optional int64 id = 1;
}

message GetNextRequest {
  optional int64 id = 1;
}

// Response messages
message BoolResponse {
  bool success = 1;
}

message CountResponse {
  int64 count = 1;
}

message IdResponse {
  optional int64 id = 1;
  bool has_value = 2;
}

message EntryResponse {
  int64 id = 1;
  int64 created_on_utc_ticks = 2;  // DateTime.Ticks for UTC timestamp
  bytes value = 3;  // MessagePack serialized TValue
  bool has_value = 4;  // Indicates if entry exists
}
